--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-astronomer-cosmos[dbt.redshift]==1.3.0
+astronomer-cosmos[dbt.redshift] >=1.4.0
 psycopg2-binary
 --only-binary psycopg2,psycopg2-binary
